--- a/src/SLarisch/Zed/OmsVisualizer/assets/Zed/scss/main.scss
+++ b/src/SLarisch/Zed/OmsVisualizer/assets/Zed/scss/main.scss
@@ -1,4 +1,4 @@
-#mermaid-container {
+#oms-visualizer-container {
     top: 60px;
     width: auto;
     overflow: auto;
@@ -125,6 +125,10 @@ header {
     font-size: 12px;
     color: #2539e3 !important;
     cursor: pointer;
+
+    p {
+        background-color: transparent !important;
+    }
 }
 
 .nodeLabel {
